# trans_advocacy_coalition_ok

./: README.md
taco_site/: README.md  db.sqlite3  manage.py  pyproject.toml
taco_site/actvism_calendar/: apps.py
taco_site/taco_site/: asgi.py  settings.py  urls.py  wsgi.py
