[tool.poetry]
name = "taco-site"
version = "0.1.0"
description = ""
authors = ["Grace Fallon <grace.fallon@syngenta.com>"]
readme = "README.md"
packages = [{include = "taco_site"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
